codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• 处理中 (0秒 • esc 中断)

  ↳ /review 运行中，已加入队列。
    ⌥ + ↑ edit

› Ask Codex to do anything

  上下文剩余 100% · ? 查看快捷键
