codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"  是否执行以下命令？                                                                                " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " ")]
"                                                                                                    "
"  原因：this is a test reason such as one that would be produced by the model                       " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"                                                                                                    "
"  $ echo 'hello world'                                                                              "
"                                                                                                    "
"› 1. 是，继续 (y)                                                                                   " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " ")]
"  2. 是，并且不再询问以 `echo 'hello world'` 开头的命令 (p)                                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " ")]
"  3. 否，并告诉 Codex 需要如何调整 (esc)                                                            " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " ")]
"                                                                                                    "
"  按 enter 确认，或按 esc 取消                                                                      " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (27, " "), (29, " ")]
