codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• 处理中 (0秒 • esc 中断)                                                       " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (12, " "), (21, " "), (23, " ")]
"  后台终端运行中：1 个 · /ps 查看                                               " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (21, " "), (30, " "), (32, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? 查看快捷键                                                 上下文剩余 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " ")]
