codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
↳ 已与后台终端交互 · cargo test -p codex-core
  └ （已等待）

• Final response.
